fix(styling): fix stupid mistake that caused to misalign text in mobile navbar buttons on chromium based browsers

--- a/src/components/MobileNavbar/MobileNavbar.module.css
+++ b/src/components/MobileNavbar/MobileNavbar.module.css
@@ -18,7 +18,7 @@
 .buttonWrapper {
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     flex-direction: column;
     gap: rem(4px);
 }
